@@ -4,39 +4,34 @@ import java.util.List;
 import java.util.Map;
 import java.util.stream.Collectors;
 
-import javax.enterprise.context.ApplicationScoped;
-import javax.inject.Inject;
-import javax.ws.rs.Consumes;
-import javax.ws.rs.DELETE;
-import javax.ws.rs.GET;
-import javax.ws.rs.POST;
-import javax.ws.rs.PUT;
-import javax.ws.rs.Path;
-import javax.ws.rs.PathParam;
-import javax.ws.rs.Produces;
-import javax.ws.rs.QueryParam;
-import javax.ws.rs.core.Context;
-import javax.ws.rs.core.GenericEntity;
-import javax.ws.rs.core.MediaType;
-import javax.ws.rs.core.Response;
-import javax.ws.rs.core.SecurityContext;
-import javax.ws.rs.core.UriBuilder;
+import jakarta.enterprise.context.ApplicationScoped;
+import jakarta.inject.Inject;
+import jakarta.ws.rs.Consumes;
+import jakarta.ws.rs.DELETE;
+import jakarta.ws.rs.GET;
+import jakarta.ws.rs.POST;
+import jakarta.ws.rs.PUT;
+import jakarta.ws.rs.Path;
+import jakarta.ws.rs.PathParam;
+import jakarta.ws.rs.Produces;
+import jakarta.ws.rs.QueryParam;
+import jakarta.ws.rs.core.Context;
+import jakarta.ws.rs.core.GenericEntity;
+import jakarta.ws.rs.core.MediaType;
+import jakarta.ws.rs.core.Response;
+import jakarta.ws.rs.core.SecurityContext;
+import jakarta.ws.rs.core.UriBuilder;
 
 import com.fasterxml.jackson.annotation.JsonAutoDetect;
 import com.fasterxml.jackson.annotation.JsonProperty;
 import com.fasterxml.jackson.dataformat.xml.annotation.JacksonXmlElementWrapper;
 import com.fasterxml.jackson.dataformat.xml.annotation.JacksonXmlProperty;
 import com.fasterxml.jackson.dataformat.xml.annotation.JacksonXmlRootElement;
-
-import io.swagger.annotations.Api;
-import io.swagger.annotations.ApiKeyAuthDefinition;
-import io.swagger.annotations.ApiOperation;
-import io.swagger.annotations.ApiParam;
-import io.swagger.annotations.ApiResponse;
-import io.swagger.annotations.ApiResponses;
-import io.swagger.annotations.Authorization;
-import io.swagger.annotations.SecurityDefinition;
-import io.swagger.annotations.SwaggerDefinition;
+import io.swagger.v3.oas.annotations.Operation;
+import io.swagger.v3.oas.annotations.Parameter;
+import io.swagger.v3.oas.annotations.responses.ApiResponse;
+import io.swagger.v3.oas.annotations.responses.ApiResponses;
+import io.swagger.v3.oas.annotations.tags.Tag;
 import org.apache.commons.collections4.CollectionUtils;
 import org.janelia.jacs2.auth.annotations.RequireAuthentication;
 import org.janelia.jacs2.rest.ErrorResponse;
@@ -49,20 +44,8 @@ import org.janelia.model.domain.sample.DataSet;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
-@SwaggerDefinition(
-        securityDefinition = @SecurityDefinition(
-                apiKeyAuthDefinitions = {
-                        @ApiKeyAuthDefinition(key = "user", name = "username", in = ApiKeyAuthDefinition.ApiKeyLocation.HEADER),
-                        @ApiKeyAuthDefinition(key = "runAs", name = "runasuser", in = ApiKeyAuthDefinition.ApiKeyLocation.HEADER)
-                }
-        )
-)
-@Api(
-        value = "Janelia Workstation Domain Data",
-        authorizations = {
-                @Authorization("user"),
-                @Authorization("runAs")
-    }
+@Tag(name = "Dataset",
+        description = "Janelia Workstation Domain Data"
 )
 @RequireAuthentication
 @ApplicationScoped
@@ -76,40 +59,40 @@ public class DatasetResource {
     @Inject
     private LegacyDomainDao legacyDomainDao;
 
-    @ApiOperation(value = "Gets a List of DataSets for the User",
-            notes = "Uses the subject key to return a list of DataSets for the user"
+    @Operation(summary = "Gets a List of DataSets for the User",
+            description = "Uses the subject key to return a list of DataSets for the user"
     )
     @ApiResponses(value = {
-            @ApiResponse( code = 200, message = "Successfully fetched the list of datasets",  response = DataSet.class,
-                    responseContainer = "List" ),
-            @ApiResponse( code = 500, message = "Internal Server Error fetching teh datasets" )
+            @ApiResponse(responseCode = "200", description = "Successfully fetched the list of datasets"),
+            @ApiResponse(responseCode = "500", description = "Internal Server Error fetching teh datasets")
     })
     @GET
     @Produces(MediaType.APPLICATION_JSON)
     @Path("dataset")
-    public Response getDatasets(@ApiParam @QueryParam("subjectKey") String subjectKey) {
+    public Response getDatasets(@Parameter @QueryParam("subjectKey") String subjectKey) {
         LOG.trace("Start getDataSets({})", subjectKey);
         try {
             List<DataSet> dataSets = datasetDao.findEntitiesReadableBySubjectKey(subjectKey, 0, -1);
             return Response
-                    .ok(new GenericEntity<List<DataSet>>(dataSets){})
+                    .ok(new GenericEntity<List<DataSet>>(dataSets) {
+                    })
                     .build();
         } finally {
             LOG.trace("Finished getDataSets({})", subjectKey);
         }
     }
 
-    @ApiOperation(value = "Gets a List of DataSets for the User",
-            notes = "Uses the subject key to return a list of DataSets for the user"
+    @Operation(summary = "Gets a List of DataSets for the User",
+            description = "Uses the subject key to return a list of DataSets for the user"
     )
     @ApiResponses(value = {
-            @ApiResponse( code = 200, message = "Successfully fetched the list of datasets",  response = DataSet.class),
-            @ApiResponse( code = 500, message = "Internal Server Error fetching teh datasets" )
+            @ApiResponse(responseCode = "200", description = "Successfully fetched the list of datasets"),
+            @ApiResponse(responseCode = "500", description = "Internal Server Error fetching teh datasets")
     })
     @GET
     @Produces(MediaType.APPLICATION_JSON)
     @Path("dataset/{id}")
-    public Response getDatasetById(@ApiParam @PathParam("id") Long id,
+    public Response getDatasetById(@Parameter @PathParam("id") Long id,
                                    @Context SecurityContext securityContext) {
         LOG.trace("Start getDatasetById({}) by {}", id, securityContext.getUserPrincipal());
         try {
@@ -137,10 +120,10 @@ public class DatasetResource {
         }
     }
 
-    @ApiOperation(value = "Creates a DataSet using the DomainObject parameter of the DomainQuery")
+    @Operation(summary = "Creates a DataSet using the DomainObject parameter of the DomainQuery")
     @ApiResponses(value = {
-            @ApiResponse( code = 200, message = "Successfully created a DataSet", response = DataSet.class),
-            @ApiResponse( code = 500, message = "Internal Server Error creating a dataset" )
+            @ApiResponse(responseCode = "200", description = "Successfully created a DataSet"),
+            @ApiResponse(responseCode = "500", description = "Internal Server Error creating a dataset")
     })
     @PUT
     @Consumes(MediaType.APPLICATION_JSON)
@@ -164,11 +147,10 @@ public class DatasetResource {
         }
     }
 
-    @ApiOperation(value = "Updates a DataSet using the DomainObject parameter of the DomainQuery")
+    @Operation(summary = "Updates a DataSet using the DomainObject parameter of the DomainQuery")
     @ApiResponses(value = {
-            @ApiResponse(code = 200, message = "Successfully updated a DataSet",
-                    response = DataSet.class),
-            @ApiResponse(code = 500, message = "Internal Server Error updating a dataset")
+            @ApiResponse(responseCode = "200", description = "Successfully updated a DataSet"),
+            @ApiResponse(responseCode = "500", description = "Internal Server Error updating a dataset")
     })
     @POST
     @Consumes(MediaType.APPLICATION_JSON)
@@ -192,21 +174,21 @@ public class DatasetResource {
         }
     }
 
-    @ApiOperation(value = "Removes the DataSet using the DataSet Id")
+    @Operation(summary = "Removes the DataSet using the DataSet Id")
     @ApiResponses(value = {
-            @ApiResponse( code = 200, message = "Successfully removed a DataSet"),
-            @ApiResponse( code = 500, message = "Internal Server Error removing a dataset" )
+            @ApiResponse(responseCode = "200", description = "Successfully removed a DataSet"),
+            @ApiResponse(responseCode = "500", description = "Internal Server Error removing a dataset")
     })
     @DELETE
     @Produces(MediaType.APPLICATION_JSON)
     @Path("dataset")
-    public Response removeDataSet(@ApiParam @QueryParam("subjectKey") final String subjectKey,
-                                  @ApiParam @QueryParam("dataSetId") final String datasetIdParam) {
+    public Response removeDataSet(@Parameter @QueryParam("subjectKey") final String subjectKey,
+                                  @Parameter @QueryParam("dataSetId") final String datasetIdParam) {
         LOG.trace("Start removeDataSet({}, dataSetId={})", subjectKey, datasetIdParam);
         Long datasetId;
         try {
             try {
-                datasetId = new Long(datasetIdParam);
+                datasetId = Long.valueOf(datasetIdParam);
             } catch (Exception e) {
                 LOG.error("Invalid dataset ID: {}", datasetIdParam, e);
                 return Response.status(Response.Status.BAD_REQUEST)
@@ -221,7 +203,7 @@ public class DatasetResource {
         }
     }
 
-    @ApiOperation(value = "Gets a distinct list of all datasets")
+    @Operation(summary = "Gets a distinct list of all datasets")
     @GET
     @Produces(MediaType.APPLICATION_JSON)
     @Path("dataset/all")
@@ -234,12 +216,12 @@ public class DatasetResource {
         }
     }
 
-    @ApiOperation(value = "Gets a list of all data sets available for color depth search in a certain alignment space")
+    @Operation(summary = "Gets a list of all data sets available for color depth search in a certain alignment space")
     @GET
     @Produces(MediaType.APPLICATION_JSON)
     @Path("dataset/colordepth")
-    public List<ColorDepthLibrary> getLibrariesWithColorDepthImages(@ApiParam @QueryParam("subjectKey") final String subjectKey,
-                                                         @ApiParam @QueryParam("alignmentSpace") final String alignmentSpace) {
+    public List<ColorDepthLibrary> getLibrariesWithColorDepthImages(@Parameter @QueryParam("subjectKey") final String subjectKey,
+                                                                    @Parameter @QueryParam("alignmentSpace") final String alignmentSpace) {
         LOG.trace("Start getLibrariesWithColorDepthImages(subject={}, alignmentSpace={})", subjectKey, alignmentSpace);
         try {
             return legacyDomainDao.getLibrariesWithColorDepthImages(subjectKey, alignmentSpace);
@@ -248,13 +230,13 @@ public class DatasetResource {
         }
     }
 
-    @ApiOperation(
-            value = "Gets the default pipelines for datasets",
-            notes = "Uses the subject key to return a list of DataSets for the user"
+    @Operation(
+            summary = "Gets the default pipelines for datasets",
+            description = "Uses the subject key to return a list of DataSets for the user"
     )
     @ApiResponses(value = {
-            @ApiResponse( code = 200, message = "Successfully fetched list of dataset-pipeline matches",  response = Map.class),
-            @ApiResponse( code = 500, message = "Internal Server Error list of dataset-pipeline matches" )
+            @ApiResponse(responseCode = "200", description = "Successfully fetched list of dataset-pipeline matches"),
+            @ApiResponse(responseCode = "500", description = "Internal Server Error list of dataset-pipeline matches")
     })
     @GET
     @Produces(MediaType.APPLICATION_JSON)
@@ -267,7 +249,7 @@ public class DatasetResource {
                     .filter(ds -> CollectionUtils.isNotEmpty(ds.getPipelineProcesses()))
                     .collect(Collectors.toMap(
                             DataSet::getIdentifier,
-                            ds->"PipelineConfig_" + ds.getPipelineProcesses().stream().reduce("", (p1, p2) -> p2)));
+                            ds -> "PipelineConfig_" + ds.getPipelineProcesses().stream().reduce("", (p1, p2) -> p2)));
         } finally {
             LOG.trace("Finished getDatasetPipelines()");
         }
@@ -298,18 +280,16 @@ public class DatasetResource {
         }
     }
 
-    @ApiOperation(value = "Gets Sage synced Data Set")
+    @Operation(summary = "Gets Sage synced Data Set")
     @ApiResponses(value = {
-            @ApiResponse(code = 200, message = "Successfully fetched list of datasets synced with SAGE",
-                    response = SageSyncedDataSet.class,
-                    responseContainer = "List"),
-            @ApiResponse(code = 500, message = "Internal Server Error list of dataset synced with SAGE")
+            @ApiResponse(responseCode = "200", description = "Successfully fetched list of datasets synced with SAGE"),
+            @ApiResponse(responseCode = "500", description = "Internal Server Error list of dataset synced with SAGE")
     })
     @GET
     @Produces({MediaType.APPLICATION_JSON, MediaType.APPLICATION_XML})
     @Path("dataSet/sage")
-    public SageSyncedDataSets getSageSyncedDataSets(@ApiParam @QueryParam("owners") final List<String> owners,
-                                                    @ApiParam @QueryParam("sageSync") final Boolean sageSync) {
+    public SageSyncedDataSets getSageSyncedDataSets(@Parameter @QueryParam("owners") final List<String> owners,
+                                                    @Parameter @QueryParam("sageSync") final Boolean sageSync) {
         LOG.trace("Start getSageSyncDataSets(owners={}, sageSync={})", owners, sageSync);
         try {
             List<DataSet> dataSets = datasetDao.getDatasetsByOwnersAndSageSyncFlag(owners, sageSync);
